[metadata]
name = graphesn
version = 0.2.9
author = Domenico Tortorella, Danilo Numeroso, Alessio Gravina
author_email = d.tortorella@phd.unipi.it, d.numeroso@phd.unipi.it, a.gravina@phd.unipi.it
description = Python implementation of Deep Graph Echo State Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dtortorella/graph-esn
project_urls =
    Bug Tracker = https://github.com/dtortorella/graph-esn
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
